--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.example</groupId>
     <artifactId>FlexLexico</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0</version>
 
     <properties>
         <maven.compiler.source>20</maven.compiler.source>
@@ -48,6 +48,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
